testsuite/tests/typecheck/should_compile/T20661_aux.hs
{-# LANGUAGE FunctionalDependencies #-}

module T20661_aux where

import {-# SOURCE #-} T20661

instance C Int Bool
